feat: git releases, plugins
